[gd_scene load_steps=4 format=2]

[ext_resource path="res://Tablet.gd" type="Script" id=1]
[ext_resource path="res://Box.tscn" type="PackedScene" id=2]
[ext_resource path="res://ViewScreen.tscn" type="PackedScene" id=3]

[node name="Tablet" type="KinematicBody"]
input_capture_on_drag = true
script = ExtResource( 1 )

[node name="Box1" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6.25, -0.25 )
Box_Size = Vector3( 9, 0.5, 0.5 )
Surface_Material = null

[node name="Box2" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.25, -0.25 )
Box_Size = Vector3( 9, 0.5, 0.5 )
Surface_Material = null

[node name="Box3" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.25, 0, -0.25 )
Box_Size = Vector3( 0.5, 12, 0.5 )
Surface_Material = null

[node name="Box4" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.25, 0, -0.25 )
Box_Size = Vector3( 0.5, 12, 0.5 )
Surface_Material = null

[node name="ViewScreen" parent="." instance=ExtResource( 3 )]
gravity_point = true
gravity = 0.0
priority = 1.0
Screen_Size = Vector2( 8, 12 )
